# rules_js

./: MODULE.bazel  pnpm-lock.yaml
e2e/pnpm_lockfiles/: MODULE.bazel  WORKSPACE  lockfile-test.bzl  setup.sh
e2e/pnpm_lockfiles/cases/: BUILD.bazel  vendored-files-v9.yaml
e2e/pnpm_lockfiles/v54/: pnpm-lock.yaml
e2e/pnpm_lockfiles/v54/snapshots/: defs.bzl
e2e/pnpm_lockfiles/v60/: pnpm-lock.yaml
e2e/pnpm_lockfiles/v60/snapshots/: defs.bzl
e2e/pnpm_lockfiles/v61/: pnpm-lock.yaml
e2e/pnpm_lockfiles/v61/snapshots/: defs.bzl
e2e/pnpm_lockfiles/v90/: pnpm-lock.yaml
e2e/pnpm_lockfiles/v90/snapshots/: defs.bzl
e2e/vendored_tarfile/: BUILD.bazel
js/private/: js_helpers.bzl  js_library.bzl
npm/private/: npm_import.bzl  npm_translate_lock.bzl  npm_translate_lock_generate.bzl  npm_translate_lock_helpers.bzl  npm_translate_lock_state.bzl  pnpm.bzl  transitive_closure.bzl  versions.bzl
npm/private/test/: parse_pnpm_lock_tests.bzl
