load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

build_test(
    name = "test",
    targets = [
        ":node_modules",
        ":node_modules/lodash",
        ":.aspect_rules_js/node_modules/lodash@4.17.21",
    ],
)

exports_files([
    "package.json",
    "lodash-4.17.21.tgz",
])
